# jury

./: .env-template  .env.template  .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  dev.Dockerfile  docker-compose-mongo.dev.yml  docker-compose-mongo.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  init-mongo-dummy.js  init-mongo-rs.sh  init-mongo.js  mongo.Dockerfile  package-lock.json
.do/: deploy.template.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  deploy.yml  test.yml
client/: .env.template  .eslintrc.js  dev.Dockerfile  index.html  package-lock.json  package.json  postbuild.js  tailwind.config.js  tsconfig.json  vite.config.js
client/public/: index.html
client/src/: Home.tsx  api.ts  data.json  enums.ts  index.css  index.tsx  store.tsx  types.d.ts  util.tsx
docs/: README.md  compress  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: contributing.md  details.md  intro.md  judging-setup.md  walkthrough.md
public/: asset-manifest.json  index.html  judge-login.js
public/css/: admin-login.css  globals.css  index.css  judge-login.css  (+1 more)
scripts/: deploy.sh  run.sh  test-runner.sh
server/: email.html  go.mod  go.sum  main.go
src/: lib.rs  main.rs  util.rs
templates/: admin-login.html.hbs  admin.html.hbs  index.html.hbs  judge-login.html.hbs  judge-welcome.html.hbs  judge.html.hbs
test-data/: judges.csv  projects.csv
tests/: Dockerfile  go.mod  go.sum  main.go  util_tests.rs
(+278 files in other folders)
